PP4E/System/Tester/Errors/test-errors-syntax.err
  File ".\Scripts\test-errors-syntax.py", line 2
    print 'starting'
                   ^
SyntaxError: invalid syntax
